# sdof

./: .buildinfo  .gitignore  .gitmodules  .readthedocs.yaml  CITATION.cff  LICENSE.txt  MANIFEST.in  Makefile  README  README.md  alpha.c  citing.html  generalized_alpha.c  glossary.html  index.html  install.html  manual.html  modal.c  modal_analysis.c  newmark.c  objects.inv  package.json  py-modindex.html  pyproject.toml  sdof.html  search.html  searchindex.js  server.py  setup.py  spectra.rb  terms.html  tests.sh  theory.md
.github/workflows/: sphinx.yml  workflow.yml
_sources/: terms.rst.txt
_sources/starting/: index.rst.txt
_sources/theory/: _index.md.txt  idx.rst.txt  index.md.txt  markov.md.txt  old.md.txt
_sources/theory/analysis/: duhamel.md.txt  transition.md.txt
_sources/theory/inelasticity/: aees.md.txt  algorithms.md.txt  daes.md.txt  odes.md.txt
_sources/theory/integration/: fourier.md.txt  transition.md.txt  verlet.md.txt
_static/js/: fmkFunctions.js  sdof.js
data/: elCentro.txt
docs/: Makefile  conf.py  index.rst  requirements.txt  sdof.bib  steel.mplstyle
docs/_static/js/: sdof.js
docs/_templates/: home.html  numpy.html
docs/examples/: index.rst
docs/examples/sdof-0001/: index.ipynb  index.rst
docs/examples/sdof-0003/: Makefile  index.rst  spectrum.c
docs/theory/: index.md  rotations.md
docs/theory/inelasticity/: daes.md
examples/: index.html
examples/sdof-0001/: index.html
examples/sdof-0003/: index.html
help/: compiling.md
site/: citing.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  sdof.html  search.html  searchindex.js  terms.html
site/_sources/: citing.rst.txt  index.rst.txt  manual.rst.txt
site/_sources/examples/: index.rst.txt
site/_sources/theory/: LTI.md.txt  alpha.md.txt  hysteresis.md.txt  index.rst.txt  logarithmic.md.txt  oscilator.md.txt  oscillator.md.txt  stability.md.txt  state-space.md.txt  transforms.md.txt
site/examples/: index.html
site/examples/sdof-0001/: index.html
site/examples/sdof-0002/: index.html
site/examples/sdof-0003/: index.html
site/starting/: index.html
site/theory/: _index.html  alpha.html  hysteresis.html  idx.html  index.html  oscilator.html  oscillator.html  rotations.html  state-space.html  transforms.html
site/theory/analysis/: duhamel.html  index.html  oscillator.html  transition.html
site/theory/inelasticity/: aees.html  algorithms.html  daes.html  odes.html
site/theory/integration/: duhamel.html  fourier.html  multistep.html  transition.html  verlet.html
src/: _integrate.c  _spectrum.c  alpha.c  fsdof.c  fsdof.rs  sdof.h  tsdof.c
src/rsdof/: integrator.rs  main.rs  oscillator.rs
src/sdof/: __init__.py  __main__.py
src/sdof/gamma/: AverageScheme.m  CollocateScheme.m  GammaSDOF.m  NewmarkScheme.m  gamma.py  integrate.py  symbols.py  test.m  test.py  wilson.py
src/sdof/integration/: alpha.py  butcher.py  duhamel.py  fourier.py  (+3 more)
starting/: index.html
tests/: chopra.sh  elastic.tcl  logo.py  spectrum.c  test.py  time.py  trig.py
tests/peer_nga/: parse.py  spectra.csv
theory/: LTI.html  _index.html  alpha.html  idx.html  index.html  logarithmic.html  markov.html  old.html  rotations.html  stability.html
theory/inelasticity/: index.html
theory/integration/: index.html  rotations.html
theory/problems/: problems.html
wasm/: index.js
(+484 files in other folders)
