[project]
name = "sdof"
version = "0.0.5"
authors = [
  {name="Claudio M. Perez", email="50180406+claudioperez@users.noreply.github.com"}
]

readme = "README.md"

keywords = [
  "seismic",
  "earthquake",
] 

[options]
#packages = find
install_requires = [
  "numpy",
  "quakeio",
]

[project.urls]
repository = "http://github.com/BRACE2/sdof"
documentation = "https://brace2.github.io/sdof"

# [project.scripts]
# ssid = "ssid.__main__:main"

[build-system]
requires = [
  "setuptools >= 52.0.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

