[project]
name = "sdof"
version = "0.0.9"
license = {file = "LICENSE.txt"}
authors = [
  {name="Claudio M. Perez", email="50180406+claudioperez@users.noreply.github.com"},
  {name="Chrystal Chern",   email="52893467+chrystalchern@users.noreply.github.com"}
]

description="Lightning-fast integration of single degree-of-freedom systems."
readme = "README.md"

keywords = [
  "dynamics",
  "integration",
  "seismic",
  "earthquake-engineering",
] 

dependencies = [
  "mdof",
  "numpy",
  "quakeio",
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: C',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]

[project.urls]
repository = "http://github.com/claudioperez/sdof"
# documentation = "https://brace2.github.io/sdof"

[project.scripts]
sdof = "sdof.__main__:main"

[build-system]
requires = [
  "setuptools >= 52.0.2",
]

build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel.linux]
environment = {CFLAGS="-O3 -mtune=native"}

